fix: documentation fixed

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -77,21 +77,21 @@
           <td>/users/[name]/favorites</td>
           <td class="method">PUT</td>
           <td>none</td>
-          <td>A JSON object holding data about the user that was added</td>
+          <td>A text message confirming the movie was added</td>
         </tr>
         <tr>
           <td>Allow new user to remove a movie from their list of favorites</td>
           <td>/users/[name]/favorites</td>
           <td class="method">DELETE</td>
           <td>none</td>
-          <td>A JSON object holding data about the user that was added</td>
+          <td>A text message confirming the deletion</td>
         </tr>
         <tr>
           <td>Allow new user to deregister</td>
           <td>/users/[name]</td>
           <td class="method">DELETE</td>
           <td>none</td>
-          <td>A JSON object holding data about the user that was added</td>
+          <td>A text message indication the successful deregistration</td>
         </tr>
       </table>
     </main>
