--- a/public/documentation.html
+++ b/public/documentation.html
@@ -30,7 +30,7 @@
           <td>/movies</td>
           <td class="method">GET</td>
           <td>none</td>
-          <td>A JSON object holding data about all the movies</td>
+          <td>A JSON object holding data about all the movies. </td>
         </tr>
         <tr>
           <td>
@@ -40,36 +40,83 @@
           <td>/movies/[name]</td>
           <td class="method">GET</td>
           <td>none</td>
-          <td>A JSON object holding data about the movie</td>
+          <td>A JSON object holding data about the movie. <br>
+            <br>
+            Example:  <br>
+            { <br>
+              "Genre": { <br>
+                  "Name": "Thriller", <br>
+                  "Description": "Thriller film, also known as suspense film or suspense thriller, is a broad film genre that involves excitement and suspense in the audience." <br>
+              }, <br>
+              "Director": { <br>
+                  "Name": "Jonathan Demme", <br>
+                  "Bio": "Jonathan Demme was born on 22 February 1944 in Baldwin, Long Island, New York, USA. He was a director and producer, known for The Silence of the Lambs (1991), Rachel Getting Married (2008) and Philadelphia (1993). He was previously married to Joanne Howard and Evelyn Purcell. He died on 26 April 2017 in Manhattan, New York City, New York, USA.", <br>
+                  "Birth": "1944", <br>
+                  "Death": "2017" <br>
+              }, <br>
+              "Actors": [], <br>
+              "_id": "649598dc844b0d20893f1860", <br>
+              "Title": "Silence of the Lambs", <br>
+              "Description": "A young FBI cadet must receive the help of an incarcerated and manipulative cannibal killer to help catch another serial killer.", <br>
+              "ImagePath": "silenceofthelambs.png", <br>
+              "Featured": true <br>
+          }</td>
         </tr>
         <tr>
           <td>Return data about a genre by name</td>
           <td>/genres/[name]</td>
           <td class="method">GET</td>
           <td>none</td>
-          <td>A JSON object holding data about the genre</td>
+          <td>A JSON object holding data about the genre. <br>
+            <br>
+            Example:  <br>
+            { <br>
+              "Genre": { <br>
+                  "Name": "Thriller", <br>
+                  "Description": "Thriller film, also known as suspense film or suspense thriller, is a broad film genre that involves excitement and suspense in the audience." <br>
+              } <br>
+          </td>
         </tr>
         <tr>
           <td>
-            Return data (bio, birth year, death year) about a director by name
+            Return data (bio, birth year, death year) about a director by name.
           </td>
           <td>/directors/[name]</td>
           <td class="method">GET</td>
           <td>none</td>
-          <td>A JSON object holding data about the genre</td>
+          <td>A JSON object holding data about the director.  <br>
+            <br>
+            Example:  <br>
+            { <br>
+              "Name": "Alfred Hitchcock", <br>
+              "Bio": "Alfred Hitchcock was an English director and filmmaker. Popularly known as the 'Master of Suspense' for his use of innovative film techniques in thrillers", <br>
+              "Birth": "1899", <br>
+              "Death": "1980" <br>
+          } <br></td>
         </tr>
         <tr>
           <td>Allow new user to register</td>
           <td>/users</td>
           <td class="method">POST</td>
-          <td>A JSON object holding data about the user to add</td>
+          <td>A JSON object holding data about the user to add. <br>
+          Example: <br>
+          {<br>
+            "Username" : "Shark",<br>
+            "Password" : "waterworld999",<br>
+            "Email" : "shark@blub.com",<br>
+            "Birthday" : "1970-11-08"<br>
+        }<br></td>
           <td>A JSON object holding data about the user that was added</td>
         </tr>
         <tr>
           <td>Allow new user to update their info (username)</td>
           <td>/users/[name]</td>
           <td class="method">PUT</td>
-          <td>A JSON object holding data about the user to add</td>
+          <td>A JSON object holding data about the user to add. <br>
+          Example: <br>
+          {<br>
+            "Password" : "waterworld888"<br>
+        }<br></td>
           <td>A JSON object holding data about the user that was added</td>
         </tr>
         <tr>
